--- a/data/mobile.css
+++ b/data/mobile.css
@@ -28,15 +28,11 @@ html {
   height: 100%;
 }
 
-.html {
-  /* background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%); */
-  
-}
-
 .body {
   background: linear-gradient(#141e30, #243b55); 
   font-size: 16px;
   /* background-color: #f5f5f5; */
+  background-color: #0000;
 }
 
 body {
