--- a/data/mobile.css
+++ b/data/mobile.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
 :root {
   --max-width: 512px;
 }
@@ -29,20 +31,193 @@ html {
 }
 
 .body {
+  font-family: 'Inter', sans-serif;
   background: linear-gradient(#141e30, #243b55); 
   font-size: 16px;
   /* background-color: #f5f5f5; */
   background-color: #0000;
-}
-
-body {
   margin:0;
   padding:0;
-  font-family: sans-serif;
-  
-  /* background-color: #f5f5f5; */
-  /* background-image: linear-gradient(to bottom, #f5f5f5, #e8e8e8); */
 }
+
+/* body {
+
+  
+  background-color: #f5f5f5;
+  background-image: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
+} */
+
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 84%;
+  max-width: 400px;
+  min-width: 350px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #03e9f4;;
+  outline: none;
+  background: transparent;
+}
+
+.login-box .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #03e9f4;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: 33px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
+.login-box form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-weight: bolder;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 3s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+  cursor: default;
+  left: 0;
+  }
+
+/*   .login-box a:hover {
+  background: #03e9f4;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 100px #03e9f4;
+} */
+
+.login-box a span {
+  position: absolute;
+  display: block;
+}
+
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%,100% {
+    left: 100%;
+  }
+}
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,100% {
+    top: 100%;
+  }
+}
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,100% {
+    right: 100%;
+  }
+}
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
+
+.pass-label {
+  color: #c1aba6;
+}
+
+
+
 
 
 header {
@@ -100,7 +275,6 @@ main {
   margin: 0 auto;
   max-width: var(--max-width);
   padding: 50px 0 50px 0;
-  
 }
 
 .sun-reading-container {
@@ -108,11 +282,13 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 12px;
 }
 
 #sun-reading {
   letter-spacing: 2px;
   color: #333;
+  margin-bottom: 12px;
 }
 
 #home {
@@ -122,7 +298,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 32px;
-  padding: 32px;
+  padding: 24px;
   width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
@@ -134,23 +310,32 @@ main {
   box-sizing: border-box;
   color: white;
   border-radius: 10px; 
+  background-image: linear-gradient(to bottom, #f5f5f5, #e8e8e8);
 }
 
 .item1 {
-  
   height: 350px;
-  width: 350px;
   display: flex;
   box-sizing: border-box;
   border-radius: 10px;
 }
 
 .item2 {
-  width: 350px;
+  color: #333;
   height: 100px;
   /* background: rgba(0,0,0,.5); */
-  background-color: #ff8c00;
+  /* background-color: #ff8c00; */
   box-sizing: border-box;
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
+.sun-light-summary {
+  color: #141e30;
+  margin-bottom: 32px;
+  font-size: .8rem;
+}
