--- a/data/mobile.css
+++ b/data/mobile.css
@@ -48,6 +48,10 @@ footer span {
   text-align: center;
 }
 
+.small-txt {
+  font-size: 0.9rem;
+}
+
 .login-box {
   position: absolute;
   top: 50%;
@@ -392,15 +396,15 @@ main {
   }
 }
 
-footer {
+#no-clients {
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0 50px;
+  padding: 0 24px 24px 24px;
 }
 
-footer::after,
-footer::before {
+#no-clients::after,
+#no-clients::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -409,11 +413,11 @@ footer::before {
   background: linear-gradient(to right, transparent, #141e3033);
 }
 
-footer::before {
+#no-clients::before {
   left: 0;
 }
 
-footer::after {
+#no-clients::after {
   right: 0;
   transform: scaleX(-1);
 }
@@ -469,14 +473,14 @@ footer::after {
 }
 
 #max-entry div h2 {
-  text-align: left;
+  text-align: center;
   color: #333;
   font-size: 18px;
   font-weight: 500;
 }
 
 #max-entry div h2::before {
-  content: 'Minimum: ';
+  content: 'Minimum Solar: ';
   font-size: 0.9rem;
   color: #141e30a4;
   font-weight: 400;
